<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar" >

        <LinearLayout
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="@drawable/common_tab_bg"
            android:onClick="back" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="9dp"
                android:scaleType="centerInside"
                android:src="@drawable/mm_title_back" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/plus_weather"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/city_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:editable="true"
        android:hint="@string/weather_city" />

    <Button
        android:id="@+id/search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/weather_cx" />

    <ImageView
        android:id="@+id/weatherInfo_img"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/search"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" >

        <TextView
            android:id="@+id/weatherInfo_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:text=""
            android:textSize="20sp" />
    </ScrollView>

</LinearLayout>